update: directory structure

--- a/src/components/about/About.astro
+++ b/src/components/about/About.astro
@@ -1,5 +1,5 @@
 ---
-import SectionContent from './SectionContent.astro';
+import SectionContent from '../SectionContent.astro';
 ---
 
 <SectionContent id='about' title='Acerca de mí'>
