--- a/src/components/projects/card/InProduction.astro
+++ b/src/components/projects/card/InProduction.astro
@@ -1,5 +1,5 @@
 ---
-import RedirectIcon from '../icons/RedirectIcon.astro';
+import RedirectIcon from "../../../icons/RedirectIcon.astro";
 
 const { link } = Astro.props
 ---
