--- a/src/components/skills/Skills.astro
+++ b/src/components/skills/Skills.astro
@@ -1,6 +1,6 @@
 ---
-import { icons } from '../utils/icons';
-import SectionContent from './SectionContent.astro';
+import { icons } from '../../utils/icons';
+import SectionContent from '../SectionContent.astro';
 import SkillIcon from './SkillIcon.astro';
 ---
 
