update: import routes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import About from '../components/About.astro'
+import About from '../components/about/About.astro'
 import Footer from '../components/Footer.astro'
 import Links from '../components/Links.astro'
-import Projects from '../components/Projects.astro'
-import Skills from '../components/Skills.astro'
+import Projects from '../components/projects/Projects.astro'
+import Skills from '../components/skills/Skills.astro'
 import GitHubIcon from '../icons/social/GitHubIcon.astro'
 import Layout from '../layouts/Layout.astro'
 ---
