update: import routes

--- a/src/components/projects/card/ProjectCard.astro
+++ b/src/components/projects/card/ProjectCard.astro
@@ -1,6 +1,6 @@
 ---
-import ForkIcon from '../../../icons/ForkIcon.astro'
-import StarIcon from '../../../icons/StarIcon.astro'
+import ForkIcon from '@icons/ForkIcon.astro'
+import StarIcon from '@icons/StarIcon.astro'
 import InProduction from './InProduction.astro'
 import Language from './Language.astro'
 
