--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import About from '../components/about/About.astro'
-import Footer from '../components/Footer.astro'
-import Links from '../components/Links.astro'
-import Projects from '../components/projects/Projects.astro'
-import Skills from '../components/skills/Skills.astro'
-import GitHubIcon from '../icons/social/GitHubIcon.astro'
-import Layout from '../layouts/Layout.astro'
+import About from '@components/about/About.astro'
+import Footer from '@components/Footer.astro'
+import Links from '@components/Links.astro'
+import Projects from '@components/projects/Projects.astro'
+import Skills from '@components/skills/Skills.astro'
+import GitHubIcon from '@icons/social/GitHubIcon.astro'
+import Layout from '@layouts/Layout.astro'
 ---
 
 <Layout title='Jeferson Limay | Estudiante de TIC'>
