--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,8 +1,8 @@
 ---
-import Footer from '../../components/Footer.astro'
-import ProjectCard from '../../components/projects/card/ProjectCard.astro'
-import GoBackIcon from '../../icons/GoBackIcon.astro'
-import Layout from '../../layouts/Layout.astro'
+import Footer from '@components/Footer.astro'
+import ProjectCard from '@components/projects/card/ProjectCard.astro'
+import GoBackIcon from '@icons/GoBackIcon.astro'
+import Layout from '@layouts/Layout.astro'
 import projects from '../../utils/projects.json'
 ---
 
