--- a/src/components/projects/card/InProduction.astro
+++ b/src/components/projects/card/InProduction.astro
@@ -1,12 +1,12 @@
 ---
-import RedirectIcon from "@icons/RedirectIcon.astro";
+import RedirectIcon from '@icons/RedirectIcon.astro';
 
 const { link } = Astro.props
 ---
 
 <div class='flex text-gray-100 text-sm'>
   <a
-    href={`https://` + link}
+    href={link}
     target='_blank'
     class='flex items-center gap-2 bg-blue-200 py-[1px] px-4 rounded-xl hover:text-green'
   >
