--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,4 @@
 ---
-import { ViewTransitions } from 'astro:transitions';
-
 export interface Props {
   title: string
 }
@@ -8,17 +6,48 @@ export interface Props {
 const { title } = Astro.props
 ---
 
-<!DOCTYPE html>
-<html lang='es' class="scroll-smooth">
+<!doctype html>
+<html lang="es">
   <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-    <meta name='generator' content={Astro.generator} />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <ViewTransitions />
   </head>
-  <body class='container bg-blue-200 px-6 sm:px-4'>
+  <body class="bg-slate-50">
     <slot />
   </body>
 </html>
+
+<style is:global>
+  html {
+    font-family: Menlo, Monaco, 'Lucida Console', 'Courier New', Courier,
+      monospace;
+    letter-spacing: -0.025rem;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    font-family:
+      system-ui,
+      -apple-system,
+      BlinkMacSystemFont,
+      'Segoe UI',
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      'Open Sans',
+      'Helvetica Neue',
+      sans-serif;
+  }
+
+  p {
+    font-size: 0.9rem;
+    line-height: 1.5;
+    text-wrap: pretty;
+  }
+</style>
