--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,46 +1,23 @@
 ---
-import About from '@components/about/About.astro'
-import Footer from '@components/Footer.astro'
-import Links from '@components/Links.astro'
-import Projects from '@components/projects/Projects.astro'
-import Skills from '@components/skills/Skills.astro'
-import GitHubIcon from '@icons/social/GitHubIcon.astro'
 import Layout from '@layouts/Layout.astro'
+import About from '@components/sections/About.astro'
+import Education from '@components/sections/Education.astro'
+import Experience from '@components/sections/Experience.astro'
+import Hero from '@components/sections/Hero.astro'
+import Projects from '@components/sections/Projects.astro'
+import Skills from '@components/sections/Skills.astro'
+import KeyboardManager from '@components/KeyboardManager.astro'
 ---
 
-<Layout title='Jeferson Limay | Estudiante de TIC'>
-  <main class='lg:flex xl:px-20 2xl:px-40 2xl:mx-20'>
-    <section
-      class='py-24 flex flex-col gap-4 lg:sticky lg:top-0 lg:h-screen lg:justify-between'
-    >
-      <div class='text-gray-100 sm:w-[500px] lg:pr-4'>
-        <h1 class='text-[3rem] font-[800] mb-4'>Jeferson Limay</h1>
-        <h4 class='text-xl font-[500] mb-4'>Estudiante de TIC</h4>
-        <p class='text-gray-200'>
-          Programador autodidacta que se dedica realizar cosas pequeñas en la
-          web con el objetivo de trabajar para una empresa y crecer como
-          programador.
-        </p>
-      </div>
-      <Links />
-      <div
-        class='text-gray-100 [&>a]:inline-block hover:[&>a]:text-green lg:pr-4'
-      >
-        <a
-          href='https://github.com/JefersonLC'
-          target='_blank'
-          title='Github'
-          referrerpolicy='no-referrer'
-        >
-          <GitHubIcon />
-        </a>
-      </div>
-    </section>
-    <section class='lg:pt-24'>
-      <About />
-      <Projects />
-      <Skills />
-      <Footer />
-    </section>
+<Layout title="Portfolio personal • Jeferson Limay">
+  <main class="p-16 m-auto w-full">
+    <Hero />
+    <About />
+    <!-- <Experience /> -->
+    <!-- <Education /> -->
+    <Projects />
+    <Skills />
   </main>
+
+  <KeyboardManager />
 </Layout>
