--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -2,7 +2,7 @@
 const { title } = Astro.props
 ---
 
-<section class="max-w-2xl mt-0 mx-auto mb-12">
+<section class="max-w-[700px] max-[700px]:mb-8 mt-0 mx-auto mb-10">
   {
     title && (
       <h2 class="mb-2 font-bold leading-loose text-2xl">
