--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -1,6 +1,38 @@
 ---
-import Section from "@components/Section.astro";
+import Section from '@components/Section.astro'
+
+import { education } from '@data'
 ---
 
 <Section title="Educación">
+  <ul class="flex flex-col gap-8">
+    {
+      education.map(({ institution, startDate, endDate, area }) => {
+        const startYear = new Date(startDate).getFullYear()
+        const endYear =
+          endDate != null ? new Date(endDate).getFullYear() : 'Actual'
+        const years = `${startYear} - ${endYear}`
+
+        return (
+          <li>
+            <article>
+              <header class="flex justify-between items-start mb-1">
+                <div>
+                  <h3 class="font-medium text-slate-800">{institution}</h3>
+                </div>
+
+                <time class="text-sm text-right text-slate-600 min-w-28 min-[700px]:text-left">
+                  {years}
+                </time>
+              </header>
+
+              <footer>
+                <p>{area}</p>
+              </footer>
+            </article>
+          </li>
+        )
+      })
+    }
+  </ul>
 </Section>
