update: styles | add: Education component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,12 @@ import Skills from '@components/sections/Skills.astro'
 import KeyboardManager from '@components/KeyboardManager.astro'
 ---
 
-<Layout title="Portfolio personal • Jeferson Limay">
-  <main class="p-16 m-auto w-full">
+<Layout title="Jeferson Limay • Jr Web Developer">
+  <main class="p-8 m-auto w-full min-[700px]:p-16">
     <Hero />
     <About />
     <!-- <Experience /> -->
-    <!-- <Education /> -->
+    <Education />
     <Projects />
     <Skills />
   </main>
