--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,15 @@
 ---
-import Layout from '@layouts/Layout.astro'
-import About from '@components/sections/About.astro'
-import Education from '@components/sections/Education.astro'
-import Experience from '@components/sections/Experience.astro'
-import Hero from '@components/sections/Hero.astro'
-import Projects from '@components/sections/Projects.astro'
-import Skills from '@components/sections/Skills.astro'
-import KeyboardManager from '@components/KeyboardManager.astro'
+import Layout from "@layouts/Layout.astro";
+import About from "@components/sections/About.astro";
+import Education from "@components/sections/Education.astro";
+import Hero from "@components/sections/Hero.astro";
+import Projects from "@components/sections/Projects.astro";
+import Skills from "@components/sections/Skills.astro";
+import KeyboardManager from "@components/KeyboardManager.astro";
+import "../global.css";
 ---
 
-<Layout title="Jeferson Limay • Jr Web Developer">
+<Layout title="Jeferson Limay • Estudiante autodidacta de programación">
   <main class="p-8 m-auto w-full min-[700px]:p-16">
     <Hero />
     <About />
